--- a/.gitignore
+++ b/.gitignore
@@ -3,19 +3,39 @@
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
 
-# Ignore everything
-*
+*.meta
+# Include the Assets directory and its contents
+#!Assets/
+#!Assets/**
 
-# Except for these 
-!/.gitignore
-!/.gitattributes
-!/Assets/
-!/Assets/Scripts/
-!/Assets/Scripts/**/*.cs
-!/Assets/Scripts/UI/*.cs
-!/Assets/UI Toolkit/**/*.uxml
-!/Assets/UI Toolkit/**/*.uss
+# Include all .cs files under Assets/Scripts/ and its subdirectories
+#!Assets/Scripts/**/*.cs
+
+# Include all .cs files under Assets/Scripts/UI/
+#!Assets/Scripts/UI/*.cs
+
+# Include all .uxml and .uss files under Assets/UI Toolkit/ and its subdirectories
+#!Assets/UI\ Toolkit/**/*.uxml
+#!Assets/UI\ Toolkit/**/*.uss
 
 
 
 
+/.plastic
+/.utmp
+/.utmp/RelWithDebInfo/5q3v444w/arm64-v8a/.cmake/api/v1/query/client-agp/cache-v2
+
+/.vs
+/Assets/Adaptive Performance
+/Assets/Editor
+/Assets/Resources
+/Assets/Scenes
+/Library
+/Logs
+/obj
+/Packages
+/ProjectSettings
+/Temp
+/UIElementsSchema
+/UserSettings
+/ignore.conf
