--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 
 *.meta
-
+*.asset
+*.inputactions
 /.plastic
 /.utmp
 /.utmp/RelWithDebInfo/5q3v444w/arm64-v8a/.cmake/api/v1/query/client-agp/cache-v2
