--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.meta
 *.asset
 *.inputactions
+*.tss
 /.plastic
 /.utmp
 /.utmp/RelWithDebInfo/5q3v444w/arm64-v8a/.cmake/api/v1/query/client-agp/cache-v2
