--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -9,8 +9,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <ProjectGuid>{A40CE0E0-9E60-36EC-5B4F-421ECAD41483}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -64,6 +63,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Calc\Rational.ToString.cs" />
     <Compile Include="Assets\Scripts\Calc\Rational.Operations.cs" />
+    <Compile Include="Assets\Scripts\UI\Change.cs" />
     <Compile Include="Assets\Scripts\Calc\BigIntegerExtensions.cs" />
     <Compile Include="Assets\Scripts\Calc\Rational.cs" />
     <Compile Include="Assets\Scripts\UI\OperationController.cs" />
