Refactor Change.cs and update related files
Refactored `Change.cs` by replacing `ChangeType` enum with an abstract `Change` class and introducing new properties and methods. Updated `Assembly-CSharp.csproj` to include `Change.Helpers.cs` which contains new classes for handling different types of changes. `OperationController.cs` was modified to reflect these changes, including renaming `input` to `inputBuf` and adding methods for undo and redo operations. UI and styles were updated in `MainViewUXML.uxml` and `MainStyles.uss` respectively, including new buttons for undo/redo and a new style for disabled buttons.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Assets\Scripts\Calc\Rational.ToString.cs" />
     <Compile Include="Assets\Scripts\Calc\Rational.Operations.cs" />
     <Compile Include="Assets\Scripts\UI\Change.cs" />
+    <Compile Include="Assets\Scripts\UI\Change.Helpers.cs" />
     <Compile Include="Assets\Scripts\Calc\BigIntegerExtensions.cs" />
     <Compile Include="Assets\Scripts\Calc\Rational.cs" />
     <Compile Include="Assets\Scripts\UI\OperationController.cs" />
