--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,16 +61,20 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\6000.0.10f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\Calc\Rational.ToString.cs" />
-    <Compile Include="Assets\Scripts\Calc\Rational.Operations.cs" />
-    <Compile Include="Assets\Scripts\UI\Change.cs" />
-    <Compile Include="Assets\Scripts\UI\Change.Helpers.cs" />
-    <Compile Include="Assets\Scripts\Calc\BigIntegerExtensions.cs" />
-    <Compile Include="Assets\Scripts\Calc\Rational.cs" />
+    <Compile Include="Assets\Scripts\Math\Rational.Operations.cs" />
+    <Compile Include="Assets\Scripts\Math\Rational.cs" />
+    <Compile Include="Assets\Scripts\UI\MainViewController.Events.cs" />
+    <Compile Include="Assets\Scripts\Math\BigIntegerExtensions.cs" />
+    <Compile Include="Assets\Scripts\Logic\PersistenceManager.cs" />
+    <Compile Include="Assets\Scripts\Logic\Change.Helpers.cs" />
+    <Compile Include="Assets\Scripts\Logic\Format.cs" />
+    <Compile Include="Assets\Scripts\Logic\SavedData.cs" />
+    <Compile Include="Assets\Scripts\Math\Rational.ToString.cs" />
     <Compile Include="Assets\Scripts\UI\OperationController.cs" />
+    <Compile Include="Assets\Scripts\Logic\Change.cs" />
     <Compile Include="Assets\Scripts\UI\MainViewController.cs" />
-    <Compile Include="Assets\Scripts\UI\NumberEntry.cs" />
     <Compile Include="Assets\Scripts\UI\CalcButton.cs" />
+    <Compile Include="Assets\Scripts\Logic\NumberEntry.cs" />
     <Compile Include="Assets\Scripts\UI\CalcButtons.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -540,6 +544,10 @@
     </Reference>
     <Reference Include="Unity.VisualScripting.Antlr3.Runtime">
       <HintPath>Library\PackageCache\com.unity.visualscripting\Runtime\VisualScripting.Flow\Dependencies\NCalc\Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>Library\PackageCache\com.unity.nuget.newtonsoft-json\Runtime\Newtonsoft.Json.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Mono.Cecil">
@@ -1048,10 +1056,6 @@
     </Reference>
     <Reference Include="UnityEditor.UI">
       <HintPath>Library\ScriptAssemblies\UnityEditor.UI.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.Rider.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.Rider.Editor.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="PsdPlugin">
