--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,17 +61,21 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\6000.0.12f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Math\Primes\Primes.cs" />
     <Compile Include="Assets\Scripts\Math\Rational.Operations.cs" />
     <Compile Include="Assets\Scripts\Math\Rational.cs" />
     <Compile Include="Assets\Scripts\Math\BigIntegerExtensions.cs" />
+    <Compile Include="Assets\Scripts\Math\Primes\Factorization.cs" />
     <Compile Include="Assets\Scripts\Logic\PersistenceManager.cs" />
     <Compile Include="Assets\Scripts\Logic\Change.Helpers.cs" />
     <Compile Include="Assets\Scripts\Logic\Format.cs" />
     <Compile Include="Assets\Scripts\Logic\SavedData.cs" />
+    <Compile Include="Assets\Scripts\Math\Primes\PrimeGenerator.cs" />
     <Compile Include="Assets\Scripts\Math\Rational.ToString.cs" />
     <Compile Include="Assets\Scripts\UI\OperationController.cs" />
     <Compile Include="Assets\Scripts\Logic\Change.cs" />
     <Compile Include="Assets\Scripts\UI\MainViewController.cs" />
+    <Compile Include="Assets\Scripts\Logic\DeferredResult.cs" />
     <Compile Include="Assets\Scripts\UI\CalcButton.cs" />
     <Compile Include="Assets\Scripts\Logic\NumberEntry.cs" />
     <Compile Include="Assets\Scripts\UI\MainViewController.Callbacks..cs" />
