--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -71,18 +71,19 @@
     <Compile Include="Assets\Scripts\Logic\Format.cs" />
     <Compile Include="Assets\Scripts\Logic\SavedData.cs" />
     <Compile Include="Assets\Scripts\Math\Primes\PrimeGenerator.cs" />
+    <Compile Include="Assets\Scripts\UI\NumberDialog.cs" />
     <Compile Include="Assets\Scripts\Math\Rational.ToString.cs" />
     <Compile Include="Assets\Scripts\UI\OperationController.cs" />
     <Compile Include="Assets\Scripts\Logic\Change.cs" />
     <Compile Include="Assets\Scripts\UI\MainViewController.cs" />
     <Compile Include="Assets\Scripts\Logic\DeferredResult.cs" />
+    <Compile Include="Assets\Scripts\Logic\Tokenizer.cs" />
     <Compile Include="Assets\Scripts\UI\CalcButton.cs" />
     <Compile Include="Assets\Scripts\Logic\NumberEntry.cs" />
     <Compile Include="Assets\Scripts\UI\MainViewController.Callbacks.cs" />
     <Compile Include="Assets\Scripts\UI\CalcButtons.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\UI Toolkit\NumberDialogUXML.uxml" />
     <None Include="Assets\UI Toolkit\Styles\MainStyles.uss" />
     <None Include="Assets\UI Toolkit\MainViewUXML.uxml" />
   </ItemGroup>
