--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\Scripts\Logic\PersistenceManager.cs" />
     <Compile Include="Assets\Scripts\Logic\Change.Helpers.cs" />
     <Compile Include="Assets\Scripts\Logic\Format.cs" />
+    <Compile Include="Assets\Scripts\UI\ButtonEnter.cs" />
     <Compile Include="Assets\Scripts\Logic\SavedData.cs" />
     <Compile Include="Assets\Scripts\Math\Primes\PrimeGenerator.cs" />
     <Compile Include="Assets\Scripts\UI\NumberDialog.cs" />
@@ -77,11 +78,13 @@
     <Compile Include="Assets\Scripts\Logic\Change.cs" />
     <Compile Include="Assets\Scripts\UI\MainViewController.cs" />
     <Compile Include="Assets\Scripts\Logic\DeferredResult.cs" />
+    <Compile Include="Assets\Scripts\UI\ButtonQuotient.cs" />
     <Compile Include="Assets\Scripts\Logic\Tokenizer.cs" />
     <Compile Include="Assets\Scripts\UI\CalcButton.cs" />
     <Compile Include="Assets\Scripts\Logic\NumberEntry.cs" />
     <Compile Include="Assets\Scripts\UI\MainViewController.Callbacks.cs" />
     <Compile Include="Assets\Scripts\UI\CalcButtons.cs" />
+    <Compile Include="Assets\Scripts\UI\NumberFormatModeButton.cs" />
     <Compile Include="Assets\Scripts\Math\Rational.Experimental.cs" />
   </ItemGroup>
   <ItemGroup>
