--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -9,8 +9,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <ProjectGuid>{A40CE0E0-9E60-36EC-5B4F-421ECAD41483}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -64,11 +63,9 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Math\Primes\Primes.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonClear.cs" />
-    <Compile Include="Assets\Scripts\Math\Rational.Operations.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonPow.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonAsRepetend.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonRedo.cs" />
-    <Compile Include="Assets\Scripts\Math\Rational.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonReciprocal.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonUndo.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonBackDrop.cs" />
@@ -79,12 +76,12 @@
     <Compile Include="Assets\Scripts\Logic\PersistenceManager.cs" />
     <Compile Include="Assets\Scripts\Logic\Format.cs" />
     <Compile Include="Assets\Scripts\Logic\SavedData.cs" />
+    <Compile Include="Assets\Scripts\Math\Q.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonDiff.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonProd.cs" />
     <Compile Include="Assets\Scripts\Math\Primes\PrimeGenerator.cs" />
     <Compile Include="Assets\Scripts\UI\NumberDialog.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonRepFactor.cs" />
-    <Compile Include="Assets\Scripts\Math\Rational.ToString.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonRepetendShiftRight.cs" />
     <Compile Include="Assets\Scripts\UI\OperationController.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonSum.cs" />
@@ -95,18 +92,20 @@
     <Compile Include="Assets\Scripts\UI\MainViewController.cs" />
     <Compile Include="Assets\Scripts\Logic\DeferredResult.cs" />
     <Compile Include="Assets\Scripts\UI\ButtonCollection.cs" />
+    <Compile Include="Assets\Scripts\Math\Q.ToString.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonEnter.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonCopy2.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonMod.cs" />
     <Compile Include="Assets\Scripts\Logic\SavedDataJsonConverter.cs" />
+    <Compile Include="Assets\Scripts\Math\Q.Experimental.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonSquare.cs" />
     <Compile Include="Assets\Scripts\Logic\Tokenizer.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonAsBalanced.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\ButtonNumberFormatMode.cs" />
+    <Compile Include="Assets\Scripts\Math\Q.Operations.cs" />
     <Compile Include="Assets\Scripts\Logic\NumberEntry.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonNeg.cs" />
     <Compile Include="Assets\Scripts\UI\MainViewController.Callbacks.cs" />
-    <Compile Include="Assets\Scripts\Math\Rational.Experimental.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonDivMersenne.cs" />
   </ItemGroup>
   <ItemGroup>
