Refactor: Move persistence-related files to new directory
Updated `Assembly-CSharp.csproj` to reflect changes in file structure:
- Moved `PersistenceManager.cs` to `Assets\Scripts\Persistence`
- Moved `SavedData.cs` to `Assets\Scripts\Persistence`
- Moved `SavedDataJsonConverter.cs` to `Assets\Scripts\Persistence`

Re-added the moved files with the same content in the new directory.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -73,15 +73,15 @@
     <Compile Include="Assets\Scripts\Math\BigIntegerExtensions.cs" />
     <Compile Include="Assets\Scripts\Math\Primes\Factorization.cs" />
     <Compile Include="Assets\Scripts\Logic\Change.Helpers.cs" />
-    <Compile Include="Assets\Scripts\Logic\PersistenceManager.cs" />
     <Compile Include="Assets\Scripts\Logic\Format.cs" />
-    <Compile Include="Assets\Scripts\Logic\SavedData.cs" />
+    <Compile Include="Assets\Scripts\Persistence\PersistenceManager.cs" />
     <Compile Include="Assets\Scripts\Math\Q.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonDiff.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonProd.cs" />
     <Compile Include="Assets\Scripts\Math\Primes\PrimeGenerator.cs" />
     <Compile Include="Assets\Scripts\UI\NumberDialog.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonRepFactor.cs" />
+    <Compile Include="Assets\Scripts\Persistence\SavedDataJsonConverter.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonRepetendShiftRight.cs" />
     <Compile Include="Assets\Scripts\UI\OperationController.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonSum.cs" />
@@ -91,12 +91,12 @@
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonQuotient.cs" />
     <Compile Include="Assets\Scripts\UI\MainViewController.cs" />
     <Compile Include="Assets\Scripts\Logic\DeferredResult.cs" />
+    <Compile Include="Assets\Scripts\Persistence\SavedData.cs" />
     <Compile Include="Assets\Scripts\UI\ButtonCollection.cs" />
     <Compile Include="Assets\Scripts\Math\Q.ToString.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonEnter.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonCopy2.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonMod.cs" />
-    <Compile Include="Assets\Scripts\Logic\SavedDataJsonConverter.cs" />
     <Compile Include="Assets\Scripts\Math\Q.Experimental.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonSquare.cs" />
     <Compile Include="Assets\Scripts\Logic\Tokenizer.cs" />
