--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonPow.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonAsRepetend.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonRedo.cs" />
+    <Compile Include="Assets\Scripts\UI\Buttons\ButtonMode.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonReciprocal.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonUndo.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonBackDrop.cs" />
@@ -82,11 +83,11 @@
     <Compile Include="Assets\Scripts\UI\OperationController.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonSum.cs" />
     <Compile Include="Assets\Scripts\Logic\Change.cs" />
-    <Compile Include="Assets\Scripts\UI\Buttons\ButtonBase.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonRepetendShiftLeft.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonQuotient.cs" />
     <Compile Include="Assets\Scripts\UI\MainViewController.cs" />
     <Compile Include="Assets\Scripts\Logic\DeferredResult.cs" />
+    <Compile Include="Assets\Scripts\UI\Buttons\AbstractButton.cs" />
     <Compile Include="Assets\Scripts\Persistence\SavedData.cs" />
     <Compile Include="Assets\Scripts\UI\ButtonCollection.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonEnter.cs" />
@@ -94,7 +95,6 @@
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonMod.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonSquare.cs" />
     <Compile Include="Assets\Scripts\Logic\Tokenizer.cs" />
-    <Compile Include="Assets\Scripts\UI\Buttons\ButtonNumberFormatMode.cs" />
     <Compile Include="Assets\Scripts\Logic\NumberEntry.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonNeg.cs" />
     <Compile Include="Assets\Scripts\UI\MainViewController.Callbacks.cs" />
