--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -82,7 +82,6 @@
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonRepFactor.cs" />
     <Compile Include="Assets\Scripts\Persistence\SavedDataJsonConverter.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonRepetendShiftRight.cs" />
-    <Compile Include="Assets\Scripts\UI\OperationController.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonSum.cs" />
     <Compile Include="Assets\Scripts\Logic\Change.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\ButtonBase.cs" />
@@ -103,6 +102,7 @@
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonNeg.cs" />
     <Compile Include="Assets\Scripts\UI\MainViewController.Callbacks.cs" />
     <Compile Include="Assets\Scripts\Logic\BaseEntry.cs" />
+    <Compile Include="Assets\Scripts\Logic\OperationController.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonDivMersenne.cs" />
   </ItemGroup>
   <ItemGroup>
