--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -74,7 +74,6 @@
     <Compile Include="Assets\Scripts\UI\Buttons\ButtonDigit.cs" />
     <Compile Include="Assets\Scripts\UI\MainViewControl.cs" />
     <Compile Include="Assets\Scripts\Logic\StringParser.cs" />
-    <Compile Include="Assets\Scripts\Logic\Change.Helpers.cs" />
     <Compile Include="Assets\Scripts\Logic\Format.cs" />
     <Compile Include="Assets\Scripts\Persistence\PersistenceManager.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonDiff.cs" />
@@ -85,20 +84,22 @@
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonRepetendShiftRight.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonSum.cs" />
     <Compile Include="Assets\Scripts\UI\MainViewControl.Callbacks.cs" />
-    <Compile Include="Assets\Scripts\Logic\Change.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\ButtonBase.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonRepetendShiftLeft.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonQuotient.cs" />
     <Compile Include="Assets\Scripts\Logic\ModelController.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonModePAdic.cs" />
+    <Compile Include="Assets\Scripts\Undo\Change.cs" />
     <Compile Include="Assets\Scripts\Logic\DeferredResult.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\AbstractButton.cs" />
     <Compile Include="Assets\Scripts\Persistence\SavedData.cs" />
     <Compile Include="Assets\Scripts\UI\ButtonCollection.cs" />
+    <Compile Include="Assets\Scripts\Logic\InputBuffer.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\ButtonToggle.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonEnter.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonCopy2.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonMod.cs" />
+    <Compile Include="Assets\Scripts\Undo\Change.Helpers.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonSquare.cs" />
     <Compile Include="Assets\Scripts\Logic\NumberEntry.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonNeg.cs" />
