--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Assets\Scripts\Undo\OutputChange.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\Specific\ButtonBackDrop.cs" />
     <Compile Include="Assets\Scripts\UI\Buttons\ButtonDigit.cs" />
+    <Compile Include="Assets\Scripts\Undo\InputBaseChange.cs" />
     <Compile Include="Assets\Scripts\UI\MainViewControl.cs" />
     <Compile Include="Assets\Scripts\Logic\StringParser.cs" />
     <Compile Include="Assets\Scripts\Logic\Format.cs" />
